fix: solve some bugs on ImageCropper

--- a/src/App.css
+++ b/src/App.css
@@ -49,15 +49,15 @@ button {
   border-radius: 5px;
 }
 
+button:hover {
+  background-color: #eee;
+  border: chocolate 1x solid;
+  font-weight: bold;
+}
+
 button.active {
   background-color: chocolate;
   color: white;
-}
-
-button:hover {
-  background-color: chocolate;
-  color: white;
-  font-weight: bold;
 }
 
 img {
@@ -80,7 +80,7 @@ canvas {
 
 #image-container {
   flex:1;
-  max-height: 72vh;
+  /* max-height: 72vh; */
 }
 
 #history-container {
